[package]
name = "monoio-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
monoio-http = "0.3.10"
monoio = "0.2.3"
http = "1.1.0"
anyhow = "1.0.0"
num_cpus = "1.16.0"
tower-http = { version = "0.5.2", features = ["full"] }
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
tracing = "0.1.4"
serde_json = "1.0.108"
clap = { version = "4.4.1", features = ["derive"] }
futures = "0.3.30"
futures-util = { version = "0.3.30", default-features = false }
bytes = "1"
