[package]
name = "monoio-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
monoio-http = "0.3.10"
monoio = "0.2.3"
http = "1.1.0"
anyhow = "1.0.0"
num_cpus = "1.16.0"
tower-http = { version = "0.5.2", features = ["full"] }
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
tracing = "0.1.4"
serde_json = "1.0.108"
clap = { version = "4.4.1", features = ["derive"] }
futures = "0.3.30"
futures-util = { version = "0.3.30", default-features = false }
bytes = "1"
async-trait = "0.1.81"
tower = { version = "0.4.13", features = ["util"] }
axum = "0.7.4"
regex = "1"
serde = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.36.0", features = ["full", "tracing"] }
ipnet = "2.7.1"
iprange = "0.6.7"
derive_builder = "0.12.0"
strum_macros = "0.24.3"
typetag = "0.2"
thiserror = "1.0.57"
dyn-clone = "1.0.11"
base64 = "0.21.0"
rand = "0.8.5"
monoio-http-client="0.3.2"