[package]
name = "monoio-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
axum = "0.7.4"
base64 = "0.21.0"
bytes = "1"
clap = { version = "4.4.1", features = ["derive"] }
derive_builder = "0.12.0"
dyn-clone = "1.0.11"
futures = "0.3.30"
futures-util = { version = "0.3.30", default-features = false }
http = "1.1.0"
ipnet = "2.7.1"
iprange = "0.6.7"
monoio = "0.2.3"
monoio-http = "0.3.10"
monoio-http-client = "0.3.2"
num_cpus = "1.16.0"
rand = "0.8.5"
regex = "1"
serde = "1.0"
serde_json = "1.0.108"
serde_yaml = "0.9"
strum_macros = "0.24.3"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full", "tracing"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.4"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
typetag = "0.2"
